# SourceFlow.AI-BackendApp

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
src/contexts/chatbots/application/: dtos.py  ports.py  use_cases.py
src/contexts/chatbots/domain/: chatbot.py  enums.py  value_objects.py
src/contexts/chatbots/infrastructure/: models.py  repository.py
src/contexts/chatbots/interfaces/: router.py
src/contexts/iam/domain/: enums.py  tenant.py  user.py  value_objects.py
src/sfplatform/: app.py  celery_app.py  config.py  db.py  middleware.py  seed.py
src/sfplatform/migrations/: env.py
src/shared/application/: tenant_context.py
src/shared/domain/: base.py  errors.py  identity.py
tests/: conftest.py
tests/integration/: test_app_and_tenant.py  test_db_connection.py  test_schema.py  test_tenant_isolation.py
tests/integration/chatbots/: test_repository.py  test_router.py
tests/integration/iam/: test_seed.py
tests/integration/inference/: test_chat_router.py  test_retrieval.py
tests/integration/ingestion/: test_celery_ingest_task.py  test_ingestion_service.py  test_repositories.py  test_upload_router.py
tests/unit/: test_config.py  test_smoke.py
tests/unit/chatbots/: test_chatbot.py
tests/unit/iam/: test_email.py  test_tenant.py
tests/unit/inference/: test_conversation.py  test_mistral_llm.py  test_rag_service.py
tests/unit/ingestion/: test_chunker.py  test_document.py  test_embedding.py  test_mistral_embeddings.py
tests/unit/shared/: test_identity.py  test_tenant_context.py
(+31 files in other folders)
